--- a/themes/snabbwall/layouts/partials/sidebar.html
+++ b/themes/snabbwall/layouts/partials/sidebar.html
@@ -14,6 +14,6 @@
       {{end}}
     </ul>
 
-	<img src="/images/logo32red.png" alt="">
+	<p><img style="display:inline" src="/images/logo32red.png" alt=""></p>
   </div>
 </div>
