--- a/layouts/index.html
+++ b/layouts/index.html
@@ -26,7 +26,7 @@
 		<h2>Development</h2>
 		<p>
 			SnabbWall is currently under <a href="/development">development</a>,
-			carried on by <a href="http://www.igalia.com">Igalia</a>, with funding
+			carried by <a href="http://www.igalia.com">Igalia</a>, with funding
 			from the <a href="https://nlnet.nl">NLnet Foundation</a>.
 		</p>
 
