Add project roadmap page

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -27,7 +27,9 @@
 		<p>
 			SnabbWall is currently under <a href="/development">development</a>,
 			carried by <a href="http://www.igalia.com">Igalia</a>, with funding
-			from the <a href="https://nlnet.nl">NLnet Foundation</a>.
+			from the <a href="https://nlnet.nl">NLnet Foundation</a>. An
+			overview of the development status is available in the <a
+				href="/roadmap/">project roadmap</a>.
 		</p>
 
 		<div id="frontpage-logos">
