Enable news section, and publish small kickoff news item

--- a/layouts/news/single.html
+++ b/layouts/news/single.html
@@ -1,20 +1,18 @@
-{{ partial "head.html" . }}
-<body class="{{ .Site.Params.themeColor }}">
-	{{ partial "sidebar.html" . }}
+	{{ partial "head.html" . }}
+	<body class="{{ .Site.Params.themeColor }}">
+		{{ partial "sidebar.html" . }}
 
-	<div class="content container">
-		<h1>News</h1>
-		<ul class="news-list">
-		{{ range .Site.Sections.news.Pages }}
-			<li>
-				<span class="date">{{ .Date.Format "Jan 2, 2006" }}</span>
-				<a href="{{ .Permalink }}">{{ .Title }}</a>
-				<div class="summary">
-					{{ if .Description }}{{ .Description }}{{ else }}{{ .Summary }}{{ end }}
-				</div>
-			</li>
-		{{ end }}
-		</ul>
-	</div>
-</body>
+		<div class="content container">
+			<div class="post">
+			 	<h1>{{ .Title }}</h1>
+			  <span class="post-date">{{ .Date.Format "Mon, Jan 2, 2006" }}</span>
+			      {{ .Content }}
+			</div>
+
+			{{ if and (isset .Site.Params "disqusShortname") (ne .Site.Params.disqusShortname "") }}
+				<h2>Comments</h2>
+				{{ partial "disqus" . }}
+			{{ end }}
+		</div>
+  </body>
 </html>
